<resources>
    <string name="app_name">ExamenUT2</string>

    <string name="tipo_unidad">
        Tipo de unidad
    </string>

    <string name="guerrero">Guerrero</string>
    <string name="arquero">Arquero</string>
    <string name="explorador">Explorador</string>
    <string name="berserker">Berserker</string>

    <string name="armadura_hierro">
        Armadura de Hierro
    </string>

    <string name="escudo_isengard">
        Escudo de Isengard
    </string>

    <string name="antorcha">
        Llevar Antorcha de Polvorín
    </string>

    <string name="identificador_hint">
        Identificador del Uruk-hai
    </string>

    <string name="error_id_vacio">
        El ejercito no acepta soldados anonimos
    </string>

    <string name="toast_enviada">
        ¡Unidad %1$s enviada al Abismo de Helm!
    </string>

    <string-array name="tipos_unidad">

        <item>@string/guerrero</item>
        <item>@string/arquero</item>
        <item>@string/explorador</item>
        <item>@string/berserker</item>

    </string-array>

</resources>